--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "joi": "^13.7.0"
+    "express-validator": "^5.3.0",
+    "joi": "^13.7.0",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "request": "^2.81.0",
